projects/compiler/test/typechecker/special_identifier/error_import_no_module.abra
val x = #import("./mod_").a